# px7-music

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
px7_music/: config.py  main.py
px7_music/core/: handler.py  latency.py  parser.py  ping.py  youtube.py
px7_music/player/: auto_play_mode.py  playback.py  player.py  player_base.py
px7_music/utility/: docs.py  utils.py
